# fastai_course

./: app.py  main.ipynb  requirements.txt
part_1/chapter_2/dog_cat_classifier/: .gitignore  README.md  pyproject.toml
