[tool.poetry]
name = "dog-cat-classifier"
version = "0.1.0"
description = ""
authors = ["Kal Cantrell <klcantrell@sep.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.13"
gradio = "^4.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
